php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #63983 enabling FPM borks compile
Submitted: 2013-01-14 04:53 UTC Modified: -
Votes:5
Avg. Score:4.2 ± 1.0
Reproduced:5 of 5 (100.0%)
Same Version:1 (20.0%)
Same OS:5 (100.0%)
From: jhein_98 at swbell dot net Assigned:
Status: Closed Package: Compile Failure
PHP Version: 5.4.10 OS: FreeBSD 9.1
Private report: No CVE-ID: None
 [2013-01-14 04:53 UTC] jhein_98 at swbell dot net
Description:
------------
Running the configure script with --enable-fpm causes make to fail with the following errors:

/usr/local/src/php-5.4.10/sapi/fpm/fpm/fpm_sockets.c -o sapi/fpm/fpm/fpm_sockets.lo
/usr/local/src/php-5.4.10/sapi/fpm/fpm/fpm_sockets.c: In function 'fpm_socket_get_listening_queue':
/usr/local/src/php-5.4.10/sapi/fpm/fpm/fpm_sockets.c:404: error: 'struct tcp_info' has no member named 'tcpi_sacked'
/usr/local/src/php-5.4.10/sapi/fpm/fpm/fpm_sockets.c:409: error: 'struct tcp_info' has no member named 'tcpi_unacked'
/usr/local/src/php-5.4.10/sapi/fpm/fpm/fpm_sockets.c:413: error: 'struct tcp_info' has no member named 'tcpi_sacked'
*** [sapi/fpm/fpm/fpm_sockets.lo] Error code 1

Stop in /usr/local/src/php-5.4.10.


The specific options I passed to the configure script was:
./configure --prefix=/usr/local/software/php --mandir=/usr/local/man  --enable-cgi --enable-fpm --with-mysql=/usr/local/software/mysql  --with-openssl-dir=/usr/local/software/openssl



Patches

fix-fpm-compile (last revision 2013-03-08 07:31 UTC by chibisuke at web dot de)

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2013-01-14 05:39 UTC] jhein_98 at swbell dot net
After doing some research, I think I may have found a fix.  I'm testing it now

Fix:
just replace in file fpm_sockets.c :
1)info.tcpi_sacked => info.__tcpi_sacked
2)info.tcpi_unacked => info.__tcpi_unacked

Hopefully this works and helps someone else.
 [2013-02-21 23:40 UTC] phpfpm1 at gmail dot com
Any new on this? It's still not fixed. Patch submitted works fine.
 [2013-03-08 07:29 UTC] chibisuke at web dot de
There's also a PR for FreeBSD on this one
http://lists.freebsd.org/pipermail/freebsd-ports-bugs/2011-November/222806.html

And the php-bug that was there back then disappeared for some reason. At lest I can't find it anymore. 

but we got used to fixing this on each server we install over and over again, so..
 [2013-03-08 07:33 UTC] chibisuke at web dot de
I attached the patchfile we're using to fix this when we install a new server.

I did however NOT test this on any other OS than FreeBSD. So please be cautious when applying it to SVN.
 [2013-06-26 18:08 UTC] felipe@php.net
Automatic comment on behalf of felipensp@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=cd176e045219373a10f32ed412092992cdbcc5b6
Log: - Fixed bug #63983 (enabling FPM borks compile on FreeBSD) patch by: chibisuke at web dot de
 [2013-06-26 18:08 UTC] felipe@php.net
-Status: Open +Status: Closed
 [2014-10-07 23:18 UTC] stas@php.net
Automatic comment on behalf of felipensp@gmail.com
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=cd176e045219373a10f32ed412092992cdbcc5b6
Log: - Fixed bug #63983 (enabling FPM borks compile on FreeBSD) patch by: chibisuke at web dot de
 [2014-10-07 23:29 UTC] stas@php.net
Automatic comment on behalf of felipensp@gmail.com
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=cd176e045219373a10f32ed412092992cdbcc5b6
Log: - Fixed bug #63983 (enabling FPM borks compile on FreeBSD) patch by: chibisuke at web dot de
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 14 07:00:02 2026 UTC