- Fixed bug #63983 (enabling FPM borks compile on FreeBSD) patch by: chibisuke at web dot de